perubahan di index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="Frontend/Libraries/Bootstrap/css/bootstrap.css">
     <!-- My CSS -->
-    <link rel="stylesheet" href="Frontend/Styles/Main.css">
+    <link rel="stylesheet" href="Frontend/Styles/main.css">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
